# hirai

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: config.rs  event.rs  lib.rs  main.rs  network.rs  watcher.rs  web.rs
static/: index.html
tests/: integration_tests.rs
